# ithildin

./: BUGS  COPYING  DEVELOPERS  Makefile  Makefile.in  README  configure
autoconf/: config.guess  config.sub  configure.ac  install-sh
doc/: conf.txt  heaps.txt  hostmatch.txt  module.txt  ssl.txt  style.txt
doc/conf/: ithildin.conf  proxyscan.conf
include/: config.h.in
include/ithildin/: conf.h  event.h  global.h  hash.h  log.h  malloc.h  md5.h  module.h  queue.h  socket.h  stand.h  string.h  timer.h  util.h
modules/: Makefile  Makefile.in
modules/dns/: Makefile  dns.c  dns.h  lookup.c  lookup.h  packet.c  res_comp.c
modules/dns/conf/: dns.conf
modules/helloworld/: Makefile  helloworld.c
modules/ident/: Makefile  ident.c  ident.h
modules/ircd/: Makefile  channel.c  channel.h  class.c  class.h  client.c  client.h  command.c  command.h  conf.c  conf.h  connection.c  connection.h  ircd.c  ircd.h  ircstring.c  ircstring.h  privilege.c  privilege.h  protocol.c  protocol.h  send.c  send.h  server.c  server.h  support.c  support.h
modules/ircd/addons/: Makefile  acl.c  acl.h  antidrone.c  cmode_filter.c  cmode_operonly.c  cmode_private.c  cmode_reg.c  cmode_reg.h  cmode_strip.c  cmodes_regonly.c  core.c  core.h  hostcrypt.c  hostmask.c  pscan.c  quarantine.c  quarantine.h  servicesid.c  servicesid.h  throttle.c  umode_admin.c  umode_admin.h  umode_helper.c  umode_helper.h  umode_reg.c  umode_reg.h  umode_regonly.c  umode_svcadmin.c  umode_svcadmin.h
modules/ircd/commands/: Makefile  acl.c  admin.c  akill.c  away.c  away.h  capab.c  chatops.c  connect.c  die.c  dns.c  error.c  flags.c  globops.c  gnotice.c  helper.c  helpops.c  info.c  invite.c  ison.c  join.c  kick.c  kill.c  links.c  list.c  locops.c  lusers.c  mode.c  mode.h  module.c  motd.c  names.c  nick.c  notice.c  npc.c  oper.c  part.c  pass.c  ping.c  pong.c  (+31 more)
modules/ircd/conf/: acl.conf  commands.conf  ircd.conf  motd  pscan.conf  smotd
modules/ircd/doc/: conf.txt  connections.txt
modules/ircd/protocols/: Makefile  bahamut14.c  dreamforge.c  ithildin1.c  rfc1459.c
modules/ircd/protocols/shared/: rfc1459_io.c  sjoin_sync_channel.c
modules/ircd/tools/: fakeserver.py
modules/log/: Makefile  log.c
modules/log/conf/: log.conf
modules/proxyscan/: Makefile  proxyscan.c  proxyscan.h
modules/services/: Makefile  conf.c  conf.h  db.c  db.h  help.h  mail.c  mail.h  nick.c  nick.h  oper.c  oper.h  send.c  send.h  services.c  services.h
modules/services/conf/: services.conf
source/: Makefile  Makefile.in  conf.c  event.c  hash.c  log.c  main.c  md5.c  md5sum.c  module.c  poller_devpoll.c  poller_kqueue.c  poller_poll.c  poller_select.c  socket.c  string.c  timer.c  util.c
source/contrib/: fmtcheck.c  gailib.c  strlcat.c  strlcpy.c
tools/: gendeps.sh  modver.sh  repover.sh
